# template_dioxus

./: .gitignore  Cargo.toml  Dioxus.toml  flake.nix
src/: app.rs  main.rs
src/app/: pages.rs
src/app/pages/: blog.rs  home.rs  route.rs
