[package]
name = "fullstack"
version = "0.1.0"
authors = ["Mach1212 <maciej.pruchnik@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"] }

dioxus = { git = "https://github.com/DioxusLabs/dioxus.git", features = [
  "fullstack",
  "router",
] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
manganis = "0.2.2"
# reqwest = { version = "0.12.5", features = [
#   "rustls-tls",
# ], default-features = false }

[features]
default = []
server = ["dioxus/axum"]
web = ["dioxus/web"]
